@@ -1,12 +1,3 @@
-# wxWidgets base directory. You'll almost certainly need to change this if
-# you're on Windows; on other platforms, we use wx-config to get this.
-wxWidgetsBase = "C:/wxWidgets-2.8.4"
-
-# CPPUnit base directory. Again, this should only need to be changed on
-# Windows, as we can use pkg-config on other platforms. You can ignore this if
-# you don't plan to build the unit tests.
-cppUnitBase = "#/../cppunit-1.12.0"
-
 # You shouldn't need to change anything below this line if you're not modifying
 # the source.
 
@@ -25,7 +16,17 @@ else:
 	buildDir = "#/build/release"
 
 if os.name == "nt":
-	# Windows compilation. At present, only MSVC++ is supported.
+	# The Windows codepath is now mostly separate. Honestly, it's easier
+	# that way. At present, only MSVC++ is supported.
+
+	# wxWidgets base directory. You'll almost certainly need to change
+	# this.
+	wxWidgetsBase = "C:/wxWidgets"
+
+	# CPPUnit base directory. You'll likely need to change this, too, if
+	# you want to build the tests on Windows. (You don't need to set it for
+	# a regular Dubnium build, though.)
+	cppUnitBase = "#/../cppunit-1.12.0"
 
 	# These are the libraries we need to link in when using Visual Studio
 	# 2005. This may differ on older versions. The standard parameters are
@@ -53,7 +54,7 @@ if os.name == "nt":
 			"%s/include" % wxWidgetsBase,
 			"%s/include/msvc" % wxWidgetsBase
 			],
-		CPPFLAGS=" /EHsc /TP /D_UNICODE /DUNICODE "
+		CPPFLAGS=" /EHsc /TP /D_UNICODE /DUNICODE /DBUILTIN_IMAGES "
 	)
 
 	if debug:
@@ -69,7 +70,7 @@ if os.name == "nt":
 				"wxexpatd"
 			],
 			LINKFLAGS=" /DEBUG ",
-			CPPPATH=["C:/wxWidgets-2.8.4/lib/vc_lib/mswud"],
+			CPPPATH=[wxWidgetsBase + "/lib/vc_lib/mswud"],
 			CPPFLAGS=" /DDEBUG /Zi /MDd /W2 "
 		)
 	else:
@@ -84,9 +85,29 @@ if os.name == "nt":
 				"wxbase28u_xml",
 				"wxexpat"
 			],
-			CPPPATH=["C:/wxWidgets-2.8.4/lib/vc_lib/mswud"],
+			CPPPATH=[wxWidgetsBase + "/lib/vc_lib/mswud"],
 			CPPFLAGS=" /DNDEBUG /MD /w /O2 "
 		)
+
+	# Test our environment settings.
+	conf = Configure(env, custom_tests={"CheckLongLong": CheckLongLong, "CheckWX": CheckWX})
+
+	if not conf.CheckCXXHeader("wx/wx.h"):
+		print "wx.h is not in the include path."
+		Exit(1)
+
+	if not conf.CheckWX():
+		print "Cannot link a wxWidgets application."
+		Exit(1)
+
+	conf.Finish()
+
+	# First compile the library, then the binaries in this directory that
+	# depend on it.
+	images = SConscript("#/images/SConscript", duplicate=0, exports=["env"])
+	libDBGp = SConscript("#/src/DBGp/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env"])
+	Dubnium = SConscript("#/src/Dubnium/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env", "images", "libDBGp"])
+	SConscript("#/tests/SConscript", duplicate=0, exports=["env", "libDBGp", "cppUnitBase", "debug"])
 else:
 	# Sensible platforms with wx-config go here.
 	conf = Configure(env, custom_tests={"CheckWXConfig": CheckWXConfig})
@@ -98,40 +119,44 @@ else:
 	conf.Finish()
 
 	if debug:
-		env.Append(CXXFLAGS=" -g -Wall ")
+		env.Append(CXXFLAGS=" -g -Wall -DDUBNIUM_DEBUG ")
 		env.ParseConfig("wx-config --debug --cxxflags --libs std,aui,richtext,stc")
 	else:
 		env.Append(CXXFLAGS=" -O3 ")
 		env.ParseConfig('wx-config --cxxflags --libs std,aui,richtext,stc')
 
-# Test our environment settings.
-conf = Configure(env, custom_tests={"CheckLongLong": CheckLongLong, "CheckWX": CheckWX})
+	# Test our environment settings.
+	conf = Configure(env, custom_tests={"CheckLongLong": CheckLongLong, "CheckWX": CheckWX})
 
-if not conf.CheckCXXHeader("wx/wx.h"):
-	print "wx.h is not in the include path."
-	Exit(1)
+	if not conf.CheckCXXHeader("wx/wx.h"):
+		print "wx.h is not in the include path."
+		Exit(1)
 
-if not conf.CheckWX():
-	print "Cannot link a wxWidgets application."
-	Exit(1)
+	if not conf.CheckWX():
+		print "Cannot link a wxWidgets application."
+		Exit(1)
 
-conf.Finish()
+	conf.Finish()
 
-# First compile the library, then the binaries in this directory that depend on
-# it.
-images = SConscript("#/images/SConscript", duplicate=0, exports=["env"])
-libDBGp = SConscript("#/src/DBGp/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env"])
-SConscript("#/src/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env", "libDBGp"])
-SConscript("#/src/TestApp/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env", "libDBGp"])
-Dubnium = SConscript("#/src/Dubnium/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env", "images", "libDBGp"])
-SConscript("#/tests/SConscript", duplicate=0, exports=["env", "libDBGp", "cppUnitBase", "debug"])
+	# Install prefix handling. By default, we'll use /usr/local.
+	prefix = ARGUMENTS.get("prefix", "/usr/local")
+	env.Append(CXXFLAGS = " -DPREFIX=\\\"%s\\\" " % prefix)
 
-# Awful, awful hack to support generating an OSX application bundle. There's
-# modules on the SCons Wiki that are supposed to be able to do this, but
-# they're pretty nasty as well and break ParseConfig.
-if platform.system() == "Darwin":
-	bundle = env.Command("%s/Dubnium.app" % buildDir, Dubnium, "buildsys/bundle.sh '%s' 'build/Dubnium.app'" % Dubnium[0])
-	env.Depends(bundle, Dubnium)
-	env.Default(bundle)
+	# First compile the library, then the binaries in this directory that
+	# depend on it.
+	images = SConscript("#/images/SConscript", duplicate=0, exports=["env", "prefix"])
+	libDBGp = SConscript("#/src/DBGp/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env"])
+	SConscript("#/src/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env", "libDBGp"])
+	SConscript("#/src/TestApp/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env", "libDBGp"])
+	Dubnium = SConscript("#/src/Dubnium/SConscript", build_dir=buildDir, src_dir="#/src", duplicate=0, exports=["env", "libDBGp", "prefix"])
+	SConscript("#/tests/SConscript", duplicate=0, exports=["env", "libDBGp", "debug"])
+
+	# Awful, awful hack to support generating an OSX application bundle.
+	# There's modules on the SCons Wiki that are supposed to be able to do
+	# this, but they're pretty nasty as well and break ParseConfig.
+	if platform.system() == "Darwin":
+		bundle = env.Command("%s/Dubnium.app" % buildDir, Dubnium, "buildsys/bundle.sh '%s' 'build/Dubnium.app'" % Dubnium[0])
+		env.Depends(bundle, Dubnium)
+		env.Default(bundle)
 
 # vim:set ts=8 sw=8 noet nocin ai ft=python:
