@@ -4,6 +4,7 @@ Version 0.2.0 (???)
 * Disabled the breakpoint panel after execution is complete.
 * Fixed segfault on close due to double call to wxSocketBase::Close().
 * Improved property tooltips.
+* Improved the build system on *nix platforms to remove the need to statically link images in.
 * Made the debug log and output panel use the same font as the source text control.
 
 Version 0.1.0 (August 20, 2007)
